refactor: Review→Rating 全量重命名 + 领域事件/异常补充 + 死代码清理
- Product Review → Rating 全量重命名（后端 product/admin 模块 + 前端）
  - 涉及: DO/Mapper/Converter/Repository/CommandService/QueryService/
    Controller/Assembler/DTO/VO/Test/Router/Hook/Page/Component
- 新增领域事件: ProductPutOnlineEvent, ProductTakeOfflineEvent
- 新增领域异常: ProductNotOwnerException
- AGENTS.md/API 速查 同步更新
- 消除冗余 DO 字段和方法,